# birdsong

./: .gitignore  README.md  pyproject.toml
birdsong/: __main__.py
birdsong/core/: birdsong.py  builtins.py  custom.py  database.py  files.py  utils.py
config/: config.example.yaml
