[tool.poetry]
name = "birdsong"
version = "0.1.0"
description = "Phase 2 of the Forest project."
authors = ["Rohan Sarvaria <rsarvaria@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.3"
pymongo = "^4.3.3"
pyyaml = "^6.0"
flake8-pyproject = "^1.2.3"
black = "^23.3.0"
supervisor = "^4.2.5"
cryptosteganography = "^0.8.3"
isbnlib = "^3.10.14"
cryptography = "^40.0.2"
stego-lsb = "^1.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
birdsong = "birdsong.__main__:main"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
